tests/paczka1/small_fuzzy/49870802.err
Error in line 2: u1OKLpq A495 39,5
Error in line 5: u1OKLpq A209 38,1
